Fixed responsive issues on mobile

--- a/assets/css/personal-details.css
+++ b/assets/css/personal-details.css
@@ -97,6 +97,7 @@
     transition: all 0.7s ease-in-out;
 }
 
+
 .about__title--animate,
 .about__description--animate {
     opacity: 1;
@@ -128,7 +129,6 @@
     height: 1.25em;
     margin-right: 0.5em;
     background-color: #fff;
-    border-radius: 50%;
     padding: 0.2em;
     box-sizing: content-box;
     position: relative;
@@ -156,8 +156,14 @@
         clip-path: none;
     }
 
+    .about,
+    .contact {
+        width: 80%;
+    }
+
     .initials {
         font-size: 7em;
+        z-index: 2;
     }
 
     .full-name {
@@ -168,6 +174,19 @@
         transform: translate(-50%, -50%);
         background-color: #efefef;
         font-size: 1em;
-        box-shadow: 0 0 5px 5px rgba(239, 239, 239, 1)
+        box-shadow: 0 0 5px 5px rgba(239, 239, 239, 1);
+        z-index: 3;
+    }
+
+    .full-name--animate {
+        top: 53%;
+        height: fit-content;
+        background-color: #efefef;
+    }
+}
+
+@media screen and (max-height: 384px) {
+    .about__description {
+        margin: 0;
     }
 }
