--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -106,7 +106,6 @@
 }
 
 .img__overlay::after {
-    /* box-shadow: inset 0 0 3px 10px #2e2e2e; */
     bottom: 0;
     content: "";
     display: block;
@@ -116,4 +115,15 @@
     right: 0;
     top: 0;
     width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+    .project {
+        width: 80vw;
+    }
+
+    .projects__title {
+        font-size: 1.5em;
+        text-align: center;
+    }
 }
